test/errors/error16.sp
%t is an arithmetic term without variables which can be evaluated to a number not belonging to correponding sort.
#maxint=5.
sorts
#s={1,3}. 
predicates
p(#s).
rules
p(1*2).
